--- a/test/fixtures/bookings.yml
+++ b/test/fixtures/bookings.yml
@@ -1,15 +1,15 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# Fixture pour les réservations de test
 
 one:
-  start_date: 2024-12-10
-  end_date: 2024-12-10
-  people: 1
+  start_date: <%= Date.today - 5.days %>
+  end_date: <%= Date.today - 3.days %>
+  number_of_people: 2
   user: one
   car: one
 
 two:
-  start_date: 2024-12-10
-  end_date: 2024-12-10
-  people: 1
+  start_date: <%= Date.today + 5.days %>
+  end_date: <%= Date.today + 7.days %>
+  number_of_people: 3
   user: two
   car: two
